--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": ">= 17.0.1",
     "react-device-detect": "^2.2.2",
     "react-dom": ">= 17.0.1",
-    "styled-components": ">= 5.2.1"
+    "styled-components": ">= 5.2.1",
+    "web-animations-js": "^2.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.39",
