--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": ">= 17.0.1",
     "styled-components": ">= 5.2.1",
+    "use-sound": "^4.0.1",
     "web-animations-js": "^2.3.2"
   },
   "devDependencies": {
